--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
   "dependencies": {
     "dotenv": "10.0.0",
     "dotenv-expand": "5.1.0",
-    "lodash.get": "4.4.2",
-    "lodash.has": "4.5.2",
-    "lodash.set": "4.3.2",
+    "lodash": "4.17.21",
     "uuid": "8.3.2"
   },
   "devDependencies": {
@@ -33,9 +31,7 @@
     "@nestjs/platform-express": "8.2.4",
     "@nestjs/testing": "8.2.4",
     "@types/jest": "27.0.3",
-    "@types/lodash.get": "4.4.6",
-    "@types/lodash.has": "4.5.6",
-    "@types/lodash.set": "4.3.6",
+    "@types/lodash": "4.14.178",
     "@types/node": "16.11.17",
     "@types/uuid": "8.3.3",
     "@typescript-eslint/eslint-plugin": "5.8.1",
